refactor : update deploy script